[package]
name = "aoc-2021"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-downloader = { git = "https://github.com/Gronner/aoc-downloader" }
lazy_static = "1.4.0"
num = "0.4.0"
regex = "1"
petgraph = "0.6.0"

[profile.dev]
opt-level = 3
