[package]
name = "aoc-2021"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-downloader = { git = "https://github.com/Gronner/aoc-downloader" }
lazy_static = "1.4.0"
itertools = "0.10.3"
num = "0.4.0"
regex = "1"
pathfinding = "3.0.3"

[profile.dev]
opt-level = 3
